include required jvm add-opens and exports directives to manifest file